--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,10 @@ python-multipart>=0.0.6
 httpx>=0.25.2
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
+
+# v0.2 MVP dependencies
+redis>=5.0.0
+slowapi>=0.1.9
+dnspython>=2.4.0
+boto3>=1.28.0  # AWS Route53
+cloudflare>=2.11.0  # Cloudflare API
