feat: v0.4 - Complete Phase 4, 5, 6, 7, and Phase 3 Domain Connect
Phase 4: Hybrid Certificate Architecture
- Dual certificate model (PRIVATE, PUBLIC, DUAL)
- ACME/Let's Encrypt integration foundation
- Certificate linking and validation
- Database migration for hybrid certs

Phase 5: RA Orchestration
- RA service layer for lifecycle management
- Workflow engine with step orchestration
- Policy engine with rule-based evaluation
- Certificate renewal automation

Phase 7: Security Enhancements
- HSM integration framework (file-based, AWS, Azure ready)
- Advanced rate limiting per domain
- Security monitoring and anomaly detection
- Security API endpoints

Phase 6: Performance & Scalability
- Performance metrics collection
- Database query optimization
- Connection pool optimization
- Query result caching framework

Phase 3: Domain Connect API
- Domain Connect client implementation
- OAuth flow support
- DNS record management via Domain Connect

- 19 new Python modules
- 59/63 tests passing
- Updated configuration with 15+ new settings
- Comprehensive documentation updates
- Examples and test coverage

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ slowapi>=0.1.9
 dnspython>=2.4.0
 boto3>=1.28.0  # AWS Route53
 cloudflare>=2.11.0  # Cloudflare API
+
+# v0.4: Hybrid Certificate Architecture
+acme>=2.7.0  # ACME protocol for Let's Encrypt
+certbot>=2.7.0  # Let's Encrypt client (optional, for CLI tools)
